Update non-angular packages and migrate breaking changes

--- a/DCSA-Theme.scss
+++ b/DCSA-Theme.scss
@@ -2071,7 +2071,7 @@ p-togglebutton.ng-dirty.ng-invalid > .p-togglebutton.p-button {
   border: 0 none;
   padding: 0;
 }
-.p-dataview.p-dataview-list .p-dataview-content > .p-grid > div {
+.p-dataview.p-dataview-list .p-dataview-content > .grid > div {
   border: 1px solid #dee2e6;
   border-width: 1px 0 0 0;
 }
