--- a/src/app/view/instructions/instructions.component.html
+++ b/src/app/view/instructions/instructions.component.html
@@ -13,77 +13,77 @@
       {{ 'general.instructions.explanation.paragraph.3' | translate }}
     </p>
     <br/>
-    <div class="p-grid">
-      <div class="p-col-fixed" style="width:140px"><b>ETA BERTH</b></div>
-      <div class="p-col">{{ 'general.instructions.explanation.berth.eta' | translate }}</div>
+    <div class="grid">
+      <div class="col-fixed" style="width:140px"><b>ETA BERTH</b></div>
+      <div class="col">{{ 'general.instructions.explanation.berth.eta' | translate }}</div>
     </div>
-    <div class="p-grid">
-      <div class="p-col-fixed" style="width:140px"><b>RTA BERTH</b></div>
-      <div class="p-col">{{ 'general.instructions.explanation.berth.rta' | translate }}</div>
+    <div class="grid">
+      <div class="col-fixed" style="width:140px"><b>RTA BERTH</b></div>
+      <div class="col">{{ 'general.instructions.explanation.berth.rta' | translate }}</div>
     </div>
-    <div class="p-grid">
-      <div class="p-col-fixed" style="width:140px"><b>PTA BERTH</b></div>
-      <div class="p-col">{{ 'general.instructions.explanation.berth.pta' | translate }}</div>
+    <div class="grid">
+      <div class="col-fixed" style="width:140px"><b>PTA BERTH</b></div>
+      <div class="col">{{ 'general.instructions.explanation.berth.pta' | translate }}</div>
     </div>
-    <div class="p-grid">
-      <div class="p-col-fixed" style="width:140px"><b>ETA PBP</b></div>
-      <div class="p-col">{{ 'general.instructions.explanation.pbp.eta' | translate }}</div>
+    <div class="grid">
+      <div class="col-fixed" style="width:140px"><b>ETA PBP</b></div>
+      <div class="col">{{ 'general.instructions.explanation.pbp.eta' | translate }}</div>
     </div>
-    <div class="p-grid">
-      <div class="p-col-fixed" style="width:140px"><b>RTA PBP</b></div>
-      <div class="p-col">{{ 'general.instructions.explanation.pbp.rta' | translate }}</div>
+    <div class="grid">
+      <div class="col-fixed" style="width:140px"><b>RTA PBP</b></div>
+      <div class="col">{{ 'general.instructions.explanation.pbp.rta' | translate }}</div>
     </div>
-    <div class="p-grid">
-      <div class="p-col-fixed" style="width:140px"><b>PTA PBP</b></div>
-      <div class="p-col">{{ 'general.instructions.explanation.pbp.pta' | translate }}</div>
+    <div class="grid">
+      <div class="col-fixed" style="width:140px"><b>PTA PBP</b></div>
+      <div class="col">{{ 'general.instructions.explanation.pbp.pta' | translate }}</div>
     </div>
-    <div class="p-grid">
-      <div class="p-col-fixed" style="width:140px"><b>ATA PBP</b></div>
-      <div class="p-col">{{ 'general.instructions.explanation.pbp.ata' | translate }}</div>
+    <div class="grid">
+      <div class="col-fixed" style="width:140px"><b>ATA PBP</b></div>
+      <div class="col">{{ 'general.instructions.explanation.pbp.ata' | translate }}</div>
     </div>
-    <div class="p-grid">
-      <div class="p-col-fixed" style="width:140px"><b>ATA PILOTAGE</b></div>
-      <div class="p-col">{{ 'general.instructions.explanation.pilotage.ata' | translate }}</div>
+    <div class="grid">
+      <div class="col-fixed" style="width:140px"><b>ATA PILOTAGE</b></div>
+      <div class="col">{{ 'general.instructions.explanation.pilotage.ata' | translate }}</div>
     </div>
-    <div class="p-grid">
-      <div class="p-col-fixed" style="width:140px"><b>ATA BERTH</b></div>
-      <div class="p-col">{{ 'general.instructions.explanation.berth.ata' | translate }}</div>
+    <div class="grid">
+      <div class="col-fixed" style="width:140px"><b>ATA BERTH</b></div>
+      <div class="col">{{ 'general.instructions.explanation.berth.ata' | translate }}</div>
     </div>
-    <div class="p-grid">
-      <div class="p-col-fixed" style="width:140px"><b>ATS CARGO OPS</b></div>
-      <div class="p-col">{{ 'general.instructions.explanation.cargoOps.ats' | translate }}</div>
+    <div class="grid">
+      <div class="col-fixed" style="width:140px"><b>ATS CARGO OPS</b></div>
+      <div class="col">{{ 'general.instructions.explanation.cargoOps.ats' | translate }}</div>
     </div>
-    <div class="p-grid">
-      <div class="p-col-fixed" style="width:140px"><b>ETC CARGO OPS</b></div>
-      <div class="p-col">{{ 'general.instructions.explanation.cargoOps.etc' | translate }}</div>
+    <div class="grid">
+      <div class="col-fixed" style="width:140px"><b>ETC CARGO OPS</b></div>
+      <div class="col">{{ 'general.instructions.explanation.cargoOps.etc' | translate }}</div>
     </div>
-    <div class="p-grid">
-      <div class="p-col-fixed" style="width:140px"><b>RTC CARGO OPS</b></div>
-      <div class="p-col">{{ 'general.instructions.explanation.cargoOps.rtc' | translate }}</div>
+    <div class="grid">
+      <div class="col-fixed" style="width:140px"><b>RTC CARGO OPS</b></div>
+      <div class="col">{{ 'general.instructions.explanation.cargoOps.rtc' | translate }}</div>
     </div>
-    <div class="p-grid">
-      <div class="p-col-fixed" style="width:140px"><b>PTC CARGO OPS</b></div>
-      <div class="p-col">{{ 'general.instructions.explanation.cargoOps.ptc' | translate }}</div>
+    <div class="grid">
+      <div class="col-fixed" style="width:140px"><b>PTC CARGO OPS</b></div>
+      <div class="col">{{ 'general.instructions.explanation.cargoOps.ptc' | translate }}</div>
     </div>
-    <div class="p-grid">
-      <div class="p-col-fixed" style="width:140px"><b>ATC CARGO OPS</b></div>
-      <div class="p-col">{{ 'general.instructions.explanation.cargoOps.atc' | translate }}</div>
+    <div class="grid">
+      <div class="col-fixed" style="width:140px"><b>ATC CARGO OPS</b></div>
+      <div class="col">{{ 'general.instructions.explanation.cargoOps.atc' | translate }}</div>
     </div>
-    <div class="p-grid">
-      <div class="p-col-fixed" style="width:140px"><b>ETD BERTH</b></div>
-      <div class="p-col">{{ 'general.instructions.explanation.berth.etd' | translate }}</div>
+    <div class="grid">
+      <div class="col-fixed" style="width:140px"><b>ETD BERTH</b></div>
+      <div class="col">{{ 'general.instructions.explanation.berth.etd' | translate }}</div>
     </div>
-    <div class="p-grid">
-      <div class="p-col-fixed" style="width:140px"><b>RTD BERTH</b></div>
-      <div class="p-col">{{ 'general.instructions.explanation.berth.rtd' | translate }}</div>
+    <div class="grid">
+      <div class="col-fixed" style="width:140px"><b>RTD BERTH</b></div>
+      <div class="col">{{ 'general.instructions.explanation.berth.rtd' | translate }}</div>
     </div>
-    <div class="p-grid">
-      <div class="p-col-fixed" style="width:140px"><b>PTD BERTH</b></div>
-      <div class="p-col">{{ 'general.instructions.explanation.berth.ptd' | translate }}</div>
+    <div class="grid">
+      <div class="col-fixed" style="width:140px"><b>PTD BERTH</b></div>
+      <div class="col">{{ 'general.instructions.explanation.berth.ptd' | translate }}</div>
     </div>
-    <div class="p-grid">
-      <div class="p-col-fixed" style="width:140px"><b>ATD BERTH</b></div>
-      <div class="p-col">{{ 'general.instructions.explanation.berth.atd' | translate }}</div>
+    <div class="grid">
+      <div class="col-fixed" style="width:140px"><b>ATD BERTH</b></div>
+      <div class="col">{{ 'general.instructions.explanation.berth.atd' | translate }}</div>
     </div>
 
 
