--- a/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -2,28 +2,28 @@
 </h4>
 <div class="headline">
   <p-card styleClass="card-scondary">
-    <div class="p-fluid p-formgrid p-grid">
-      <div class="p-field p-col-12 p-md-4">
+    <div class="p-fluid p-formgrid grid">
+      <div class="p-field col-12 md:col-4">
         <label class="label-compressed" for="vesselName">{{'general.transportCall.table.vesselName.label'| translate}}
           : </label>
         <span id="vesselName"> {{transportCall.vesselName}}</span>
       </div>
-      <div class="p-field p-col-12 p-md-4">
+      <div class="p-field col-12 md:col-4">
         <label class="label-compressed" for="portOfCall">{{'general.port.ofCall'| translate}}: </label>
         <span id="portOfCall"
               *ngIf="defaultTimestamp.portOfCall != null">  {{$any(defaultTimestamp.portOfCall).UNLocationCode}} </span>
         <!-- {{defaultTimestamp.portOfCall.unLocode}} </span> -->
       </div>
-      <div class="p-field p-col-12 p-md-4">
+      <div class="p-field col-12 md:col-4">
         <!-- Placeholder for additional information -->
       </div>
-      <div class="p-field p-col-12 p-md-4">
+      <div class="p-field col-12 md:col-4">
         <label class="label-compressed" for="vesselIMO">{{'general.transportCall.table.vesselImo.label'| translate}}
           : </label>
         <span id="vesselIMO"> {{transportCall.vesselIMONumber}}</span>
       </div>
       <!--
-      <div class="p-field p-col-12 p-md-4">
+      <div class="p-field col-12 md:col-4">
         <label class="label-compressed" for="terminal">{{'general.terminal.label'| translate}}: </label>
         <span>{{defaultTimestamp.eventLocation?.facilityCode}}</span>
       <span *ngIf="defaultTimestamp.eventLocation?.facilityCode == null">
@@ -37,7 +37,7 @@
       </div>
     -->
 
-      <div class="p-field p-col-12 p-md-4" *ngIf="respondingToTimestamp != null">
+      <div class="p-field col-12 md:col-4" *ngIf="respondingToTimestamp != null">
         <!-- Placeholder for additional information when rejecting timestamp -->
         <label class="label-compressed" for="eventtimestamp">{{'general.table.header.eventTimestamp.declinedLabel' | translate }}: </label>
         <span style="font-weight: bold;" >{{ " " +(respondingToTimestamp.eventDateTime | timestampToTimezone: respondingToTimestamp.portOfCall)[0]}}</span>
@@ -46,14 +46,14 @@
   </p-card>
 </div>
 
-<div class="p-fluid p-formgrid p-grid">
+<div class="p-fluid p-formgrid grid">
 
-  <div class="p-field p-col-12 p-md-4">
+  <div class="p-field col-12 md:col-4">
     <label for="timestampType">{{ 'general.table.header.timestamp.label' | translate }}: </label>
     <p-dropdown id="timestampType" styleClass="dropdown" [(ngModel)]="timestampSelected" [options]="timestampTypes"
                 [filter]=true filterBy="label" appendTo="body" (onChange)="showLocationNameOption()"></p-dropdown>
 
-    <div class="p-field p-col-12 p-md-2" ></div>
+    <div class="p-field col-12 md:col-2" ></div>
 
     <div [hidden]="!showTerminalOption()">
       <label for="terminalSelected">{{ 'general.terminal.label' | translate }}: </label>
@@ -72,13 +72,13 @@
     </div>
     </div>
 
-  <div class="p-field p-col-12 p-md-2"></div>
+  <div class="p-field col-12 md:col-2"></div>
 
   <!--
-  <div class="p-field p-col-12 p-md-5">
+  <div class="p-field col-12 md:col-5">
     <label for="logoftimestamp">{{ 'general.table.header.logOfTimestamp.label' | translate }}: </label>
-    <div class="p-fluid p-formgrid p-grid">
-      <div class="p-field p-col-12 p-md-6">
+    <div class="p-fluid p-formgrid grid">
+      <div class="p-field col-12 md:col-6">
         <p-calendar id="logoftimestamp" appendTo="body" [(ngModel)]="logOfTimestampDate" hourFormat="24"
                     [monthNavigator]="true" [showButtonBar]="false"
                     [showIcon]="true" [showWeek]="true"
@@ -86,7 +86,7 @@
                     styleClass="date-time-date-field" placeholder="{{ 'general.timestamp.date.log' | translate }}"
                     [panelStyleClass]="'datetime-panel'"></p-calendar>
       </div>
-      <div class="p-field p-col-12 p-md-6">
+      <div class="p-field col-12 md:col-6">
         <p-inputMask [(ngModel)]="logOfTimestampTime" mask="99:99"
                      placeholder="{{ 'general.timestamp.time' | translate }}"
                      styleClass="datetime-time-time-field"></p-inputMask>
@@ -98,11 +98,11 @@
  -->
 
 
-  <div class="p-field p-col-12 p-md-5">
+  <div class="p-field col-12 md:col-5">
     <label for="eventtimestamp">{{ 'general.table.header.eventTimestamp.label' | translate }}: </label>
 
-    <div class="p-fluid p-formgrid p-grid">
-      <div class="p-field p-col-12 p-md-6">
+    <div class="p-fluid p-formgrid grid">
+      <div class="p-field col-12 md:col-6">
         <p-calendar id="eventtimestamp" appendTo="body" [(ngModel)]="eventTimestampDate" hourFormat="24"
                     [monthNavigator]="true" [showButtonBar]="false"
                     [showIcon]="true" [showWeek]="true"
@@ -110,7 +110,7 @@
                     styleClass="date-time-date-field" placeholder="{{ 'general.timestamp.date.event' | translate }}"
                     [panelStyleClass]="'datetime-panel'"></p-calendar>
       </div>
-      <div class="p-field p-col-12 p-md-6">
+      <div class="p-field col-12 md:col-6">
         <p-inputMask [(ngModel)]="eventTimestampTime" mask="99:99"
                      placeholder="{{ 'general.timestamp.time' | translate }}"
                      styleClass="datetime-time-time-field"></p-inputMask>
@@ -124,16 +124,16 @@
     </div>
   </div>
   <!--
-  <div class="p-field p-col-12 p-md-2">
+  <div class="p-field col-12 md:col-2">
   </div>
 
-  <div class="p-field p-col-12 p-md-5">
+  <div class="p-field col-12 md:col-5">
     <label for="locationID">{{'general.table.header.berthId.label' | translate }}</label>
     <input id="locationID" [(ngModel)]="defaultTimestamp.locationId" pInputText style="width: 100%" type="text"/>
   </div>
-  <div class="p-field p-col-12 p-md-7">
+  <div class="p-field col-12 md:col-7">
   </div> -->
-  <div class="p-field p-col-12 p-md-4">
+  <div class="p-field col-12 md:col-4">
     <div class="p-field berth-location-field" [hidden]="!showLocationNameOption()">
       <label for="locationName">{{ locationNameLabel | translate }}:</label>
       <input id="locationName" [(ngModel)]="locationName" pInputText style="width: 100%" type="text"/>
@@ -164,9 +164,9 @@
     </p-dropdown>
   </div>
 
-  <div class="p-field p-col-12 p-md-2"></div>
+  <div class="p-field col-12 md:col-2"></div>
 
-  <div class="p-field p-col-12 p-md-5">
+  <div class="p-field col-12 md:col-5">
     <span class="p-float-label">
       <textarea class="commentBox" id="commentbox" pInputTextarea [(ngModel)]="defaultTimestamp.remark"></textarea>
       <label for="commentbox">{{ 'general.comment.tooltip' | translate }}</label>
@@ -174,25 +174,25 @@
   </div>
 
   <!-- Vessel Position -->
-  <div class="p-field p-col-12 p-md-4" [hidden]="!showVesselPosition()">
+  <div class="p-field col-12 md:col-4" [hidden]="!showVesselPosition()">
     <label for="vesselPositionLatitude">{{ "general.timestamp.vesselPosition.latitude.label" | translate }}:</label>
     <input id="vesselPositionLatitude" [(ngModel)]="vesselPosition.latitude" pInputText style="width: 100%" type="text"/>
   </div>
-  <div class="p-field p-col-12 p-md-4" [hidden]="!showVesselPosition()">
+  <div class="p-field col-12 md:col-4" [hidden]="!showVesselPosition()">
     <label for="vesselPositionLongitude">{{ "general.timestamp.vesselPosition.longitude.label" | translate }}:</label>
     <input id="vesselPositionLongitude" [(ngModel)]="vesselPosition.longitude" pInputText style="width: 100%" type="text"/>
   </div>
-  <div class="p-field p-col-12 p-md-2"></div>
+  <div class="p-field col-12 md:col-2"></div>
 
   <!-- Location Name -->
 
-  <div class="p-field p-col-12 p-md-6"></div>
+  <div class="p-field col-12 md:col-6"></div>
 </div>
 
-<div class="p-grid">
-  <div class="p-col-8">
+<div class="grid">
+  <div class="col-8">
   </div>
-  <div class="p-col-4 footer_option" style="justify-content: flex-end">
+  <div class="col-4 footer_option" style="justify-content: flex-end">
     <p-button (onClick)="close()" class="footer_option__buttons"
               icon="pi pi-times-circle" label="{{'general.close.label' | translate}}" iconPos="left">
     </p-button>
