--- a/src/app/view/transport-calls-table/transport-calls-table.component.html
+++ b/src/app/view/transport-calls-table/transport-calls-table.component.html
@@ -11,12 +11,12 @@
          (onRowSelect)="selectTransportCall($event)"
          (onRowUnselect)="unselectTransportCall()">
   <ng-template pTemplate="caption">
-    <div class="p-grid">
-      <div class="p-col">{{'general.transportCall.label' | translate}}</div>
-      <div class="p-col tableHeader">
+    <div class="grid">
+      <div class="col">{{'general.transportCall.label' | translate}}</div>
+      <div class="col tableHeader">
 
       </div>
-      <div class="p-col tableHeader">
+      <div class="col tableHeader">
         <div class="tableHeader__buttons">
           <p-button (onClick)="openCreationDialog()" class="p-button-raised p-button-rounded tableHeader__add_button"
                     icon="pi pi-plus" pTooltip="{{ 'general.transportCall.table.create.label' | translate }}"
@@ -33,7 +33,7 @@
         <!--         <div class="p-input-icon-left globalSearch">
              <i class="pi pi-search"></i>
              <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')"
-                    placeholder="{{ 'general.table.header.search.label' | translate }}" class="p-column-filter"
+                    placeholder="{{ 'general.table.header.search.label' | translate }}" class="column-filter"
                     pTooltip="{{ 'general.table.header.search.tooltip' | translate }}">
            </div>
          -->
