Partly align entities with JIT-1.2 spec & more
- rename timestampDefinition to timestampDefinitionTO on TimestampInfo
- check for null in extractVesselAttributes
- include timestampDefinitionsMap in mapping service to add acceptTimestampDefinitionEntity & rejectTimestampDefinitionEntity to timestampInfo

--- a/src/app/view/timestamp-accept-editor/timestamp-accept-editor.component.html
+++ b/src/app/view/timestamp-accept-editor/timestamp-accept-editor.component.html
@@ -41,7 +41,7 @@
         <!-- Placeholder for additional information when rejecting timestamp -->
         <label class="label-compressed" for="eventtimestamp">{{'general.table.header.timestamp.acceptlabel' |
           translate }}</label>
-        <span style="font-weight: bold;">{{": " + responseTimestamp.timestampDefinition.timestampTypeName}}</span>
+        <span style="font-weight: bold;">{{": " + responseTimestamp.timestampDefinitionTO.timestampTypeName}}</span>
       </div>
     </div>
   </p-card>
