DDT-1153: add css rule for overflow-x
- solves sticky header issue on TC table

--- a/DCSA-Theme.scss
+++ b/DCSA-Theme.scss
@@ -4641,3 +4641,7 @@ removing the cursor, as the splitter gutter functionality does not work!
 .p-splitter-gutter{
   cursor: default !important;
 }
+
+.p-datatable-responsive-scroll > .p-datatable-wrapper {
+	overflow-x: visible !important;
+}
