DDT-1152: Parse dcsa errors & refactor pop-ups
& prevent endless loading on TC table.

--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -43,5 +43,7 @@
         </ng-template>
       </p-splitter>
     </div>
+<p-toast key="GenericSuccessToast" position="bottom-right"></p-toast>
+<p-toast key="GenericErrorToast" position="bottom-right"></p-toast>
   </div>
 </div>
